# c-

./: .gitignore  individual.cpp  individual.h  main.cpp
ID3/: CMakeLists.txt  README.md  dataItem.h  in.txt  main.cpp  node.cpp  node.h  require.h  trainList.cpp  trainList.h  tree.cpp  tree.h
TSP/: CMakeLists.txt  City.h  Graph.cpp  Graph.h  SAA.cpp  SAA.h  m_random.cpp  m_random.h  main.cpp
aStar/: AStar.cpp  AStar.h  CMakeLists.txt  Node.cpp  Node.h  main.cpp
basic_practice/: map_prac.cpp  template_prac.cpp  test.cpp  using_prac.cpp
cmake_demo/: CMakeLists.txt  main.cpp
cmake_demo/math/: add.cpp  add.h
game_tree/: CMakeLists.txt  README.md  basic.cpp  basic.h  main.cpp  tic-tac-toe.cpp  tic-tac-toe.h
genetic_aligorithm/: CMakeLists.txt  groupRange.h  individual.cpp  individual.h  main.cpp
genetic_aligorithm/func/: CMakeLists.txt  func.h  roulette_wheel_selection.cpp
roulette_wheel_selection_demo/: CMakeLists.txt
